@@ -296,6 +296,9 @@ grub_gettext_init_ext (const char *locale)
 {
   char *locale_dir;
 
+  if (!locale)
+    return;
+
   locale_dir = grub_env_get ("locale_dir");
   if (locale_dir == NULL)
     {
@@ -370,8 +373,6 @@ grub_cmd_translate (grub_command_t cmd __attribute__ ((unused)),
 
 GRUB_MOD_INIT (gettext)
 {
-  (void) mod;			/* To stop warning.  */
-
   const char *lang;
 
   lang = grub_env_get ("lang");
